# third_party_curl

./: .gitignore  0001-GetCurlErrorInfo.patch  0002-RecordConnectedIP.patch  0003-GetDnsStatus.patch  0004-ProvieClearDnsCacheAPI.patch  0005-JudgeIsDnsFromNetsysCache.patch  0006-AddBalancedHttp2Reuse.patch  0007-CookiesSecureHook.patch  0008-ConnectOnlyForReuse.patch  0009-GetIssuerName.patch  0011-OpenHiTlsCallbackOpt.patch  0012-AddMPTCPSetNetId.patch  BUILD.gn  CMakeLists.txt  COPYRIGHT.OpenSource  OAT.xml  README.OpenSource  backport-0001-CVE-2023-23914-CVE-2023-23915.patch  backport-0001-CVE-2023-23916.patch  backport-0001-CVE-2023-28320.patch  backport-0002-CVE-2023-23914-CVE-2023-23915.patch  backport-0002-CVE-2023-23916.patch  backport-0002-CVE-2023-28320.patch  backport-0003-CVE-2023-23914-CVE-2023-23915.patch  backport-0003-CVE-2023-28320.patch  backport-0004-CVE-2023-23914-CVE-2023-23915.patch  backport-0005-CVE-2023-23914-CVE-2023-23915.patch  backport-0101-curl-7.32.0-multilib.patch  backport-CVE-2022-22576.patch  backport-CVE-2022-27782.patch  backport-CVE-2022-32205.patch  backport-CVE-2022-32206.patch  backport-CVE-2022-32207.patch  backport-CVE-2022-32208.patch  backport-CVE-2022-32221.patch  backport-CVE-2022-35252-cookie-reject-cookies-with-control-bytes.patch  backport-CVE-2022-42915.patch  backport-CVE-2022-42916.patch  backport-CVE-2022-43551-http-use-the-IDN-decoded-name-in-HSTS-checks.patch  backport-CVE-2022-43552-smb-telnet-do-not-free-the-protocol-struct-in-_done.patch  (+44 more)
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
customized/include/: curl_config.h  curl_config_liteos_a.h  curl_config_liteos_m.h  curl_config_standard.h  curl_config_standard_http3.h
customized/patch/: 001_add_have_fchmod_macro_for_fopen.patch
docs/cmdline-opts/: cookie.d
docs/libcurl/: symbols-in-versions
include/curl/: curl.h  curlver.h  multi.h  typecheck-gcc.h
lib/: Makefile.inc  altsvc.c  asyn-ares.c  asyn-thread.c  cf-h2-proxy.c  cf-socket.c  cf-socket.h  conncache.c  connect.c  connect.h  content_encoding.c  content_encoding.h  cookie.c  cookie.h  curl_config.h  curl_config.h.cmake  curl_config_liteos_a.h  curl_config_liteos_m.h  curl_path.c  curl_rtmp.c  curl_sasl.c  curl_setup.h  curl_setup_once.h  easy.c  easyoptions.c  file.c  formdata.c  ftp.c  ftp.h  ftplistparser.c  getenv.c  getinfo.c  headers.c  hostcheck.c  hostip.c  hostip.h  hostsyn.c  hsts.c  hsts.h  http.c  (+37 more)
lib/vauth/: digest.c  digest_sspi.c  vauth.h
lib/vquic/: curl_quiche.c
lib/vssh/: libssh.c  libssh2.c  wolfssh.c
lib/vtls/: gtls.c  mbedtls.c  nss.c  openhitls.c  openhitls.h  openssl.c  openssl.h  schannel_verify.c  vtls.c  vtls.h  vtls_int.h  wolfssl.c  x509asn1.c  x509asn1.h
m4/: curl-functions.m4
src/: tool_cfgable.h  tool_getparam.c  tool_listhelp.c  tool_operate.c
tests/: FILEFORMAT.md  runtests.pl
tests/data/: Makefile.inc  test1474  test1656  test728  test8  test898  test974  test976
tests/libtest/: Makefile.inc
tests/unit/: Makefile.inc  unit1397.c  unit1656.c
